syntax = "proto3";

package auth;

service AuthService {
    rpc SignUp (CreateUserDto) returns (EmptyResponse) {}
    rpc SignIn (SignInDto) returns (EmptyResponse) {}
    rpc Refresh (RefreshTokensDto) returns (RefreshTokensResponse) {}
    rpc Logout (RefreshTokensDto) returns (EmptyResponse) {}
}

message EmptyResponse {}

message CreateUserDto {
    string login = 1;
    string email = 2;
    string password = 3;
    optional string phoneNumber = 4;
    optional string firstName = 5;
    optional string midName = 6;
    optional string lastName = 7;
    optional string userRole = 8;
}

message SignInDto {
    string loginOrEmail = 1;
    string password = 2;
}

message RefreshTokensDto {
    string refreshToken = 1;
}

message RefreshTokensResponse {
    string accessToken = 1;
    string refreshToken = 2;
}